@@ -23,6 +23,8 @@ densityHeatmap(data,
   \item{anno}{annotation for the matrix columns or the list. The value should be a vector or a data frame.  It can also be a \code{\link{HeatmapAnnotation-class}} object.}
   \item{ylab}{label on y-axis in the plot}
   \item{title}{title of the plot}
+  \item{range}{ranges on the y-axis. The lower bound is the maximul value between \code{range[[1]]} and minimal value
+       in the data and the upper bound is the minimal value between \code{range[[2]]} and maximul value in the data.}
   \item{...}{pass to \code{\link{draw,HeatmapList-method}}}
 
 }
